bug: Only show first item on mobile
CART PAGE: Hide second item on mobile

--- a/src/components/Product/Product.module.scss
+++ b/src/components/Product/Product.module.scss
@@ -35,6 +35,10 @@
   display: flex;
   align-items: center;
 
+  &:not(:first-child) {
+    display: none;
+  }
+
   &:last-child {
     margin-bottom: 0;
   }
@@ -43,6 +47,10 @@
     flex-wrap: wrap;
     width: getColumns(5.5, $bp-medium);
     align-items: flex-start;
+
+    &:not(:first-child) {
+      display: block;
+    }
 
     &:last-child {
       margin-left: 0;
